[project]
name = "yci107-image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "google>=3.0.0",
    "google-generativeai>=0.8.5",
    "langgraph>=0.6.6",
    "langserve>=0.3.1",
    "pip>=25.2",
    "pydantic-settings>=2.10.1",
]
